--- a/app/src/main/res/drawable/shape_pretty_a.xml
+++ b/app/src/main/res/drawable/shape_pretty_a.xml
@@ -5,6 +5,6 @@
         android:color="#ff2b3f"/>
 
     <solid
-        android:color="@color/white"/>
+        android:color="#00ffffff"/>
 
 </shape>
