--- a/app/src/main/res/drawable/shape_pretty_b.xml
+++ b/app/src/main/res/drawable/shape_pretty_b.xml
@@ -5,6 +5,6 @@
         android:color="#FFA500"/>
 
     <solid
-        android:color="@color/white"/>
+        android:color="#00ffffff"/>
 
 </shape>
