--- a/app/src/main/res/drawable/shape_pretty_e.xml
+++ b/app/src/main/res/drawable/shape_pretty_e.xml
@@ -5,6 +5,6 @@
         android:color="#5ecac2"/>
 
     <solid
-        android:color="@color/white"/>
+        android:color="#00ffffff"/>
 
 </shape>
