--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -8,8 +8,7 @@
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_marginLeft="15dp" />
 
     <LinearLayout
         android:id="@+id/ll_info"
@@ -32,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginLeft="3dp"
+            android:layout_marginTop="2dp"
             android:layout_gravity="center_vertical"
             android:visibility="gone"/>
 
@@ -41,8 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
             android:singleLine="true"
+            android:layout_marginBottom="2dp"
             android:layout_gravity="center_vertical"
-            android:text="@string/app_name"
             android:textColor="@color/white"
             android:textSize="15sp" />
     </LinearLayout>
