--- a/app/src/main/res/layout/item_live_house_gift.xml
+++ b/app/src/main/res/layout/item_live_house_gift.xml
@@ -35,6 +35,19 @@
         android:textColor="#80ffffff"
         android:textSize="8sp" />
 
+    <TextView
+        android:id="@+id/tv_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="3dp"
+        android:layout_marginTop="3dp"
+        android:background="@drawable/bg_tag_gift_sort"
+        android:gravity="center"
+        android:textColor="@color/comm_white"
+        android:textSize="6sp"
+        android:visibility="gone" />
+
     <!--<View-->
     <!--android:id="@+id/view_select_mark"-->
     <!--android:layout_width="match_parent"-->
