--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -35,7 +35,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="185dp">
+        android:layout_height="185dp"
+        android:layout_marginTop="4.5dp">
 
     </android.support.v4.view.ViewPager>
 
