--- a/app/src/main/res/layout/dialog_one_click.xml
+++ b/app/src/main/res/layout/dialog_one_click.xml
@@ -50,7 +50,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_confirm"
