--- a/app/src/main/res/layout/fragment_week_star_list.xml
+++ b/app/src/main/res/layout/fragment_week_star_list.xml
@@ -87,33 +87,46 @@
                     android:textColor="@color/tran_black2"
                     android:textSize="9sp" />
 
-                <TextView
-                    android:id="@+id/tv_charm_value"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="12dp"
-                    android:singleLine="true"
-                    android:textColor="@color/tran_black2"
-                    android:textSize="10sp" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_click_gift"
-                    android:layout_width="wrap_content"
-                    android:layout_height="23dp"
-                    android:layout_below="@id/tv_charm_value"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/shape_red_orange"
-                    android:gravity="center"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="一键赠送"
-                    android:textColor="@color/white"
-                    android:textSize="12dp"
-                    android:textStyle="bold" />
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:id="@+id/tv_charm_value"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="12dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:singleLine="true"
+                            android:textColor="@color/tran_black2"
+                            android:textSize="10sp" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/tv_click_gift"
+                        android:layout_width="wrap_content"
+                        android:layout_height="23dp"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/shape_red_orange"
+                        android:gravity="center"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:text="一键赠送"
+                        android:textColor="@color/white"
+                        android:textSize="12dp"
+                        android:textStyle="bold" />
+                </LinearLayout>
             </RelativeLayout>
 
         </LinearLayout>
