--- a/app/src/main/res/layout/fragment_follow_main.xml
+++ b/app/src/main/res/layout/fragment_follow_main.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <net.lucode.hackware.magicindicator.MagicIndicator
+    <com.whzl.mengbi.ui.widget.tablayout.TabLayout
         android:id="@+id/tab_follow"
+        style="@style/HomeFollowTab"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="#fdfdfd" />
+        app:tabGravity="fill"
+        app:tabMode="scrollable" />
 
     <View
         android:layout_width="match_parent"
