--- a/app/src/main/res/layout/item_week_star.xml
+++ b/app/src/main/res/layout/item_week_star.xml
@@ -18,7 +18,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="1"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -29,8 +28,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/rl_rank"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_toRightOf="@id/rl_rank" />
 
         <TextView
             android:id="@+id/tv_nick_name"
@@ -40,7 +38,6 @@
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@id/iv_avatar"
             android:singleLine="true"
-            android:text="@string/app_name"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold" />
@@ -52,8 +49,7 @@
             android:layout_below="@id/tv_nick_name"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:layout_toRightOf="@id/iv_avatar"
-            android:src="@drawable/usergrade" />
+            android:layout_toRightOf="@id/iv_avatar" />
 
         <TextView
             android:id="@+id/tv_value"
@@ -63,7 +59,6 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:singleLine="true"
-            android:text="@string/app_name"
             android:textColor="@color/tran_black2"
             android:textSize="10sp" />
     </RelativeLayout>
