--- a/app/src/main/res/layout/dialog_guard_details.xml
+++ b/app/src/main/res/layout/dialog_guard_details.xml
@@ -11,14 +11,14 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_petal_left_top"/>
+            android:src="@drawable/ic_petal_left_top" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/ic_petal_right_bottom"/>
+            android:src="@drawable/ic_petal_right_bottom" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,23 +42,13 @@
                         android:id="@+id/iv_user_avatar"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:src="@color/black"/>
-
-                    <TextView
-                        android:id="@+id/tv_user_name"
-                        android:layout_width="60dp"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:gravity="center"
-                        android:singleLine="true"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        android:src="@color/black" />
                 </LinearLayout>
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_heart"/>
+                    android:src="@drawable/ic_heart" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -71,19 +61,39 @@
                         android:id="@+id/iv_avatar"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:src="@color/black"/>
-
-                    <TextView
-                        android:id="@+id/tv_nick_name"
-                        android:layout_width="60dp"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:gravity="center"
-                        android:singleLine="true"
-                        android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        android:src="@color/black" />
                 </LinearLayout>
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_user_name"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tv_nick_name"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -96,10 +106,10 @@
                     android:id="@+id/tv_period_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_guard_time"
                     android:layout_marginLeft="18dp"
-                    android:text="守护时长 : "
+                    android:drawableLeft="@drawable/ic_guard_time"
                     android:drawablePadding="5dp"
+                    android:text="守护时长 : "
                     android:textColor="@color/tran_black2"
                     android:textSize="12sp" />
 
@@ -127,8 +137,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="18dp"
                     android:drawableLeft="@drawable/ic_guard_price"
-                    android:text="守护价格 : "
                     android:drawablePadding="5dp"
+                    android:text="守护价格 : "
                     android:textColor="@color/tran_black2"
                     android:textSize="12sp" />
 
@@ -150,9 +160,9 @@
                 android:layout_marginTop="23dp"
                 android:background="@drawable/shape_shadow_yellow"
                 android:text="立即开通"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </RelativeLayout>
