--- a/app/src/main/res/layout/head_follow.xml
+++ b/app/src/main/res/layout/head_follow.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="您还没有关注的主播"
+            android:text="您还没有订阅的主播"
             android:textColor="#40000000"
             android:textSize="12sp" />
 
