--- a/app/src/main/res/layout/activity_user_info_layout.xml
+++ b/app/src/main/res/layout/activity_user_info_layout.xml
@@ -13,6 +13,7 @@
         android:background="@color/comm_white">
 
         <com.whzl.mengbi.ui.widget.view.CircleImageView
+            android:transitionName="iv_avatar"
             android:id="@+id/iv_avatar"
             android:layout_width="45dp"
             android:layout_height="45dp"
