--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -12,6 +12,7 @@
         android:background="@color/colorPrimary">
 
         <com.whzl.mengbi.ui.widget.view.CircleImageView
+            android:transitionName="iv_avatar"
             android:id="@+id/iv_avatar"
             android:layout_width="67dp"
             android:layout_height="67dp"
