--- a/app/src/main/res/layout/activity_pkrecord.xml
+++ b/app/src/main/res/layout/activity_pkrecord.xml
@@ -156,13 +156,13 @@
             android:textStyle="bold" />
 
         <LinearLayout
+            android:id="@+id/ll_state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16.5dp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginTop="12dp"
-            android:background="@drawable/bg_black_room"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:paddingBottom="15dp"
