--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.whzl.mengbi.ui.widget.view.LeftRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/lrl_live"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#343a42">
@@ -53,8 +54,8 @@
                                 android:layout_width="50dp"
                                 android:layout_height="13dp"
                                 android:layout_marginLeft="6dp"
-                                android:layout_marginTop="3dp"
                                 android:layout_marginRight="6dp"
+                                android:layout_marginTop="3dp"
                                 android:textSize="11sp" />
 
 
@@ -63,10 +64,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentBottom="true"
-                                android:layout_marginLeft="6dp"
-                                android:layout_marginTop="6.5dp"
-                                android:layout_marginRight="6dp"
                                 android:layout_marginBottom="2dp"
+                                android:layout_marginLeft="6dp"
+                                android:layout_marginRight="6dp"
+                                android:layout_marginTop="6.5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/white"
                                 android:textSize="10sp" />
@@ -196,8 +197,8 @@
                             android:id="@+id/tv_run_way_gift"
                             android:layout_width="1000dp"
                             android:layout_height="20dp"
-                            android:layout_marginLeft="5dp"
                             android:layout_marginBottom="2dp"
+                            android:layout_marginLeft="5dp"
                             android:gravity="center_vertical"
                             android:singleLine="true"
                             android:textSize="12sp" />
@@ -339,7 +340,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitCenter"
-                        app:autoPlay="true"/>
+                        app:autoPlay="true" />
 
                     <LinearLayout
                         android:id="@+id/ll_gift_container"
@@ -460,7 +461,6 @@
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
                         android:visibility="visible">
-
 
 
                         <android.support.constraint.ConstraintLayout
@@ -665,7 +665,7 @@
             android:visibility="gone"
             app:autoPlay="true" />
 
-    </RelativeLayout>
+    </com.whzl.mengbi.ui.widget.view.LeftRelativeLayout>
 
     <include
         android:id="@+id/draw_layout_include_live"
