--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -43,7 +43,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/text_color_no_add_super_run" />
+        android:background="#30ffffff" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -95,7 +95,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/text_color_no_add_super_run" />
+        android:background="#30ffffff" />
 
     <RelativeLayout
         android:layout_width="match_parent"
